Bug 656781 - More efficient way to use g_app_info_launch_uris and gnome_vfs_mime_application_launch, r=karlt

--HG--
extra : rebase_source : a97c1bdaf1b45d380c3b90d9abb2507c68ab5128